Update 'fpesuvbb9-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:34d1f56c860c8cfff93796ac0e2afc2c95d6b4e6@sha256:46d500d98935a3511b4e0e27d1e7dafc31e4c4802116ea5ac7f9eb01c3f37d49

--- a/components/fpesuvbb9-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/fpesuvbb9-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: fpesuvbb9-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:34d1f56c860c8cfff93796ac0e2afc2c95d6b4e6@sha256:46d500d98935a3511b4e0e27d1e7dafc31e4c4802116ea5ac7f9eb01c3f37d49
+          name: container-image
